Added background image

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div class="auth-page__container">
+      <img src="/frontend/assets/img/pexels-spencer-davis-4393021.jpg" alt="">
       <div class="auth-page__sign-in">
         <header class="auth-page__header">Inicia sesion</header>
         <form class="auth-page__form">
