home page class

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,7 +33,7 @@
 
       <div class="auth-page__sign-up">
         <header class="auth-page__header">Registrate gratis...</header>
-        <form class="auth-page__form" id="sign-up__form">
+        <form class="auth-page__form" id="sign-up__form" autocomplete="off">
           <label for="email">
             E-mail
             <input type="email" name="email" required />
