--- a/frontend/pages/home/home.html
+++ b/frontend/pages/home/home.html
@@ -6,7 +6,8 @@
     <title>Bienvenido!</title>
 </head>
 <body>
-    <h1>Bienvenido!!!</h1>
-
+    <h1>Bienvenido <span id="user-name"></span>!!!</h1>
+    <button id="log-out">Cerrar sesion</button>
+    <script src="./home.js" type="module"></script>
 </body>
 </html>
