home page styles

--- a/frontend/pages/home/home.html
+++ b/frontend/pages/home/home.html
@@ -18,7 +18,7 @@
         />
         <div class="home-page__profile-photo">
           <img
-            src="https://blogger.googleusercontent.com/img/a/AVvXsEh-WKe00-hlzFOP1aYnZlKwJJ42mtBx82f4zyLZKUJ3ff2eE6biYdTXDwiPNvXYTOOFaRC_wev3s88_EWt-jTGTOPPt7Vhc7C4-hwKZmlDT5IKoOfMMz8Zirr87khpO9ssGGX4xCVePi73SHtfDe8drRYI6CnehjijlN47TQjFsKii4T3Be2lWiaauG=s16000-rw"
+            src="https://t4.ftcdn.net/jpg/00/64/67/27/360_F_64672736_U5kpdGs9keUll8CRQ3p3YaEv2M6qkVY5.jpg"
             alt=""
           />
         </div>
