Several general fixes

--- a/frontend/pages/home/home.html
+++ b/frontend/pages/home/home.html
@@ -18,7 +18,7 @@
         />
         <div class="home-page__profile-photo">
           <img
-            src="https://t4.ftcdn.net/jpg/00/64/67/27/360_F_64672736_U5kpdGs9keUll8CRQ3p3YaEv2M6qkVY5.jpg"
+            src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?size=626&ext=jpg&ga=GA1.1.1826414947.1699228800&semt=ais"
             alt=""
           />
         </div>
