added spinner loader in home page, and user name in profile

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,7 +19,7 @@
     <p>Cargando...</p>
   </div>
 
-  <div id="contenido-principal" style="display: none;"></div>
+  <div id="contenido-principal" style="display: none;">
     <div class="auth-page__container">
       <img src="/frontend/assets/img/pexels-spencer-davis-4393021.jpg" alt="" />
       <div class="auth-page__sign-in">
