--- a/frontend/pages/home/home.html
+++ b/frontend/pages/home/home.html
@@ -12,6 +12,12 @@
   </head>
 
   <body>
+    <div id="pantalla-carga">
+      <div class="spinner"></div>
+      <p>Cargando...</p>
+    </div>
+
+    <div id="contenido-principal" style="display: none;">
     <main class="home-page__container">
       <header class="home-page__cover-photo">
         <img
@@ -72,6 +78,7 @@
         <p>All rights reserved ©</p>
       </footer>
     </main>
+    </div>
 
     <script src="./home.js" type="module"></script>
   </body>
